[package]
name = "invoca_rest_api"
version = "0.1.0"
edition = "2021"
keywords = ["http", "request", "client", "zuora"]
categories = ["web-programming::http-client"]
description = "A HTTP Client built for doing some of the more complex Invoca tasks using the public API. Just empty at this point, but more to come!"
documentation = "https://docs.rs/invoca_rest_client"
repository = "https://github.com/aviani-sb/invoca_rest_api.git"
authors = ["James Aviani <james.aviani@gmail.com>"]
readme = "README.md"
license = "MIT"


[dependencies]
